--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -1,55 +1,46 @@
 /* src/components/Navbar.css */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #f8f9fa;
-    border-bottom: 1px solid #dee2e6;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 3px solid #F2921D;
+  margin-bottom: 20px;
+}
+
+.logo-container {
+  flex-shrink: 0;
+}
+
+.logo-container{
+  font-family: 'roberto', sans-serif;
+  color: #F2921D;
+
+}
+
+.nav-links-right {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-item {
+  margin-left: 1rem;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #F2921D;
+  font-family: 'roberto', sans-serif;
+
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+}
   
-  .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
-  }
   
-  .logo {
-    height: 40px;
-    margin-right: 10px;
-  }
-  
-  .logo-text {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .nav-links-left, .nav-links-right {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    flex: 1;
-  }
-  
-  .nav-links-left {
-    justify-content: flex-start;
-  }
-  
-  .nav-links-right {
-    justify-content: flex-end;
-  }
-  
-  .nav-item {
-    margin-left: 20px;
-  }
-  
-  .nav-link {
-    text-decoration: none;
-    color: #000;
-    font-size: 1rem;
-  }
   .property-container {
     display: flex;
     flex-wrap: wrap;
