--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,3 +1,7 @@
+.main-image {
+    width:70px;
+    height: 70px;
+}
 .hero-image {
     width: 100%;
     height: auto;
@@ -11,6 +15,7 @@
     width: 100%;
     height: 100%; 
     margin-bottom: 2%;
+    margin-top: -20px;
     background-color: #21686936;
 }
 
