--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -5,17 +5,20 @@
   align-items: center;
   padding: 1rem;
   border-bottom: 3px solid #F2921D;
-  margin-bottom: 20px;
+ 
 }
-
-.logo-container {
-  flex-shrink: 0;
+img 
+.logo{
+  height: 20px;
+  width: 20px;
 }
 
 .logo-container{
   font-family: 'roberto', sans-serif;
   color: #F2921D;
-
+  height: 50px;
+  display: flex;
+  align-items: center;
 }
 
 .nav-links-right {
