--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -7,8 +7,7 @@
   border-bottom: 3px solid #F2921D;
  
 }
-img 
-.logo{
+img .logo{
   height: 20px;
   width: 20px;
 }
@@ -38,7 +37,12 @@ img
   font-family: 'roberto', sans-serif;
 
 }
-
+a {
+  text-decoration: none;
+  color: #F2921D;
+  font-family: 'roberto', sans-serif;
+  text-align: center;
+}
 .nav-link:hover {
   text-decoration: underline;
 }
