added the footer with css and home page carosel image css updated

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -4,7 +4,7 @@
 }
 .hero-image {
     width: 100%;
-    height: auto;
+    height: 390px;
     /* position: absolute; */
     /* z-index: 1; */
     /* marg */
