--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -7,6 +7,14 @@
   border-bottom: 3px solid #F2921D;
  
 }
+.navbar-logo{
+  display: flex;
+  align-items: center;
+  margin: 5px;
+}
+.navbar h1{
+  margin-bottom: 0;
+}
 img .logo{
   height: 20px;
   width: 20px;
