--- a/client/src/styles/Properties.css
+++ b/client/src/styles/Properties.css
@@ -1,4 +1,46 @@
-.properties-container {
+.filter-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Add some space between filter items */
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  
+  .filter-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .filter-container label {
+    display: block;
+  }
+  
+  .filter-container input[type="number"], .filter-container select {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #F2921D;
+  }
+  .filter-container input[type="number"], .filter-container select:focus {
+    outline: none;
+  }
+  .filter-container button {
+    background-color: #F2921D;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+    height: 30px;
+  }
+  
+  .property-link {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .properties-container {
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -6,42 +48,16 @@
   
   .properties-list {
     width: 50%;
+    margin-right: 10px;
     padding: 20px;
     border: 2px solid #F2921D;
-
   }
-  
-  .filter-container {
-    margin-bottom: 20px;
+  map{
+    width: 49%;
   }
-  
-  .filter-container label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  .filter-container input[type="number"] {
-    width: 100%;
-    padding: 8px;
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .property-link{
-    color: white;
-    text-decoration: none;
-  }
-  
-  .filter-container button {
-    background-color: #F2921D;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    cursor: pointer;
-  }
-  
   .properties-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
   }
   
@@ -56,10 +72,5 @@
     height: 150px;
     object-fit: cover;
     margin-bottom: 10px;
-  }
-  
-  .map-container {
-    flex: 1;
-    margin-left: 20px;
   }
   
