--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -1,11 +1,11 @@
 .footer {
     background-color: #fff;;
     padding: 20px;
-    position: fixed;
     bottom: 0;
     width: 100%;
     text-align: center;
     border-top: 3px solid #F2921D;
+    color: #F2921D;
   }
   
   .footer p {
@@ -14,8 +14,10 @@
     font-family: 'roberto', sans-serif;;
     text-decoration: none;
   }
- .footer img {
-    height: 35px;
-    width: 35px;
+ .smLink {
+  font-size: 20px;
  }
-  
+ .links{
+  display: flex;
+  justify-content: center;
+ }
