--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -21,6 +21,7 @@
     background-color: #ffffff;
     margin-bottom: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 280px;
   }
   .featuredProperty-container:hover .featuredProperty-details {
     background-color: #F2921D;
