--- a/client/src/styles/Properties.css
+++ b/client/src/styles/Properties.css
@@ -45,7 +45,12 @@
     justify-content: space-between;
     padding: 20px;
   }
-  
+  .Heart{
+    color: white;
+    font-size: 30px;
+    float: right;
+  }
+
   .properties-list {
     width: 50%;
     margin-right: 10px;
@@ -73,4 +78,6 @@
     object-fit: cover;
     margin-bottom: 10px;
   }
-  
+  .filter{
+    padding: 0;
+  }
