--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 1rem;
   border-bottom: 3px solid #F2921D;
+  background-color: #f4eded;
  
 }
 .navbar-logo{
@@ -16,10 +17,13 @@
   margin-bottom: 0;
 }
 img .logo{
-  height: 20px;
-  width: 20px;
+  height: 70px;
+  width: 70px;
 }
-
+img.main-image {
+  height: 100px;
+  width: 100px;
+}
 .logo-container{
   font-family: 'roberto', sans-serif;
   color: #F2921D;
