added a feature in readme and changed the css of the logo

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -41,6 +41,7 @@ img .logo{
 img.main-image {
   height: 100px;
   width: 100px;
+  padding-top: 12px;
 }
 .logo-container{
   font-family: 'roberto', sans-serif;
